# my-tracks

./: .copilot-directives.md  .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  AGENTS.md  COMMANDS.md  DEPLOYMENT.md  DOCS_INDEX.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  MQTT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WEBSOCKET.md  create-test-trail  deploy  docker-compose.postgres-production.yml  docker-compose.postgres.yml  docker-compose.socket.yml  docker-compose.yml  docker-entrypoint  eslint.config.mjs  generate-tail  install  my-tracks-server  package-lock.json  package.json  pnpm-lock.yaml  pnpm-release-age-grandfather.tsv  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  release  start-server  test-my-tracks-server  test_asgi.py  (+19 more)
.claude/: settings.json
.cursor/rules/: main-worktree-off-limits.mdc  no-wall-clock-tests.mdc  pr-ship-and-review.mdc  stacking-tool.mdc
.cursor/skills/gh-stack/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  stacking-tool
.github/ci/: python-static  secret-scan  setup-python
.github/workflows/: auto-approve-owner-prs.yml  auto-merge-dependabot.yml  ci.yml  cleanup-branch-on-merge.yml  cleanup-graphite-branches.yml  cleanup-merged-branches.yml  cve-check.yml  merged-pr-closer.yml  pr-validation.yml  security-scan.yml
app/: __init__.py  admin.py  admin_sync_export.py  apps.py  auth.py  consumers.py  device_names.py  domesti_bot.py  domesti_bot_api.py  domesti_bot_auth.py  domesti_location_request.py  domesti_location_request_queue.py  domesti_relay.py  ip.py  location_display.py  location_latest.py  location_report.py  middleware.py  models.py  notifications.py  pki.py  routing.py  serializers.py  urls.py  utils.py  views.py  ws_broadcast.py
app/management/commands/: reencrypt_pki.py
app/migrations/: 0001_initial.py  0002_device_unique_per_owner.py  0002_phase11_friends.py  0002_phase9_waypoints_geofencing.py  0003_add_smtpconfig.py  0003_fix_device_unique_constraint_no_condition.py  0004_add_device_last_location_at.py  0004_transitionaction.py  0005_add_location_received_via.py  0006_backfill_location_received_via_mqtt.py  0007_alter_waypoint_rid.py  0008_add_global_automation_rule.py  0009_location_quality_settings.py  0010_phase11_friends.py  0011_friendrequest_auto_accept_reciprocal.py  0012_domesti_bot_config.py  0013_domesti_bot_test_url.py  0014_domesti_bot_user_location_urls.py  0015_nomenclature_help_text.py  0016_device_latest_location.py  0017_remove_global_automation_rule.py  0018_domesti_bot_relay_dedup.py  0019_location_optional_fields.py  0020_domesti_bot_remote_request_location.py  0021_domesti_bot_device_location_cooldown.py  0022_domesti_bot_user_location_cooldown.py  0023_domesti_bot_cooldown_min_value.py  0024_alter_device_latest_location.py
app/mqtt/: __init__.py  auth.py  broker.py  commands.py  handlers.py  plugin.py  sys_plugin.py
config/: asgi.py  runtime.py  settings.py  urls.py  wsgi.py
dev-tooling/: esbuild.config.mjs  rasterize-pwa-icons.mjs
docs/: AGENTS.md  ANDROID_CERTS.md  COMMANDS.md  DEPLOYMENT.md  DOCS_INDEX.md  DOMESTI_BOT_INTEGRATION_PLAN.md  EMAIL_GUIDELINES.md  GH-STACK.md  GLOBAL_AUTOMATIONS_PLAN.md  GRAPHITE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  MQTT_IMPLEMENTATION.md  PROJECT_SUMMARY.md  PWA.md  QUICKSTART.md  SYSTEMD.md  TESTING.md  TROUBLESHOOTING.md  WEBSOCKET.md
etc/: owntracks.json
etc/systemd/: my-tracks.service
examples/: .env.production.example
my_tracks/: admin.py  apps.py  consumers.py  models.py  pki.py  serializers.py  urls.py  views.py
my_tracks/management/commands/: reencrypt_pki.py
my_tracks/migrations/: 0001_initial.py  0009_device_is_online.py
my_tracks/mqtt/: auth.py  broker.py  handlers.py  plugin.py
mytracks/: urls.py
nginx/: nginx.conf  proxy_params
production-testing/: my-tracks-production-container-manager  my-tracks-production-container-tester
production/docker/: docker-compose.linux.yml  docker-compose.postgres-testing.yml  docker-compose.yml
production/scripts/: my-tracks-production-container-manager
scripts/: deploy  generate-tail  my-tracks-server  on-deploy  release  setup  verify-setup
tests/bash/: test-my-tracks-server
tests/python/: conftest.py  test_admin_sync_export.py  test_asgi.py  test_auth.py  test_command_views.py  test_database_config.py  test_deploy_script.py  test_deployment_docs.py  test_docker_compose.py  test_domesti_bot.py  test_domesti_location_request.py  test_domesti_relay.py  test_friends_api.py  test_friends_models.py  test_generate_tail.py  test_global_automations.py  test_health_api.py  test_location_display.py  test_location_report.py  test_logging_filters.py  test_middleware.py  test_mqtt_auth.py  test_mqtt_broker.py  test_mqtt_commands.py  test_mqtt_handlers.py  test_mqtt_plugin.py  test_mqtt_tls_e2e.py  test_pki.py  test_production_settings.py  test_read_path.py  test_semver.py  test_serializers.py  test_tracker.py  test_transition_actions.py  test_web_ui.py  test_websocket.py  test_ws_broadcast.py
tracker/: consumers.py  models.py  serializers.py  views.py
tracker/migrations/: 0004_alter_location_latitude_alter_location_longitude.py
web_ui/: apps.py  urls.py  views.py
web_ui/static/web_ui/: manifest.webmanifest  sw.js
web_ui/static/web_ui/css/: main.css
web_ui/static/web_ui/ts/: css.d.ts  friend-request-banner.test.ts  friend-request-banner.ts  friends.test.ts  friends.ts  lastKnownLoad.test.ts  lastKnownLoad.ts  liveActivity.test.ts  liveActivity.ts  liveActivityLastKnownWorkflow.test.ts  liveActivityToolbar.test.ts  liveActivityToolbar.ts  locationMeta.test.ts  locationMeta.ts  locationReport.test.ts  locationReport.ts  main.ts  messages.test.ts  messages.ts  serviceWorkerRecovery.ts  swRouting.sync.test.ts  swRouting.test.ts  swRouting.ts  utils.test.ts  utils.ts  webSocketReconnect.test.ts  webSocketReconnect.ts
web_ui/static/web_ui/ts/test/: fetchMock.ts
web_ui/templates/web_ui/: about.html  admin_panel.html  geofences.html  home.html  login.html  profile.html
