[project]
name = "my-tracks"
version = "0.1.0"
description = "Self-hosted location tracking backend for OwnTracks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.4",
    "djangorestframework>=3.17.1",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9.12",
    "gunicorn>=25.3.0",
    "channels>=4.3.2",
    "daphne>=4.2.1",
    "whitenoise>=6.12.0",
    "typer>=0.15.0",
    "amqtt",
    "cryptography==46.0.7",
    "dj-database-url>=3.1.2",
    "h2>=4.3.0",
    "priority>=2.0.0",
    "cbor2==5.9.0",
    "pyasn1==0.6.3",
    "pygments==2.20.0",
    "pyopenssl==26.0.0",
    "ujson==5.12.0",
    "charset-normalizer==3.4.7",
    "filelock==3.29.0",
    "librt==0.9.0",
    "mypy==1.20.1",
    "packaging==26.1",
    "platformdirs==4.9.6",
    "rich==15.0.0",
    "zope-interface==8.4",
    "pytest-django>=4.12.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "black>=26.3.1",
    "shellcheck-py>=0.11.0.1",
    "pip-audit>=2.10.0",
    "idna==3.12",
    "certifi==2026.4.22",
    "pathspec==1.1.0",
    "pip==26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "app"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["tests/python"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v -n auto"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["app"]

[tool.black]
line-length = 88
target-version = ['py314']

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


[dependency-groups]
dev = [
    "coverage-enable-subprocess>=1.0",
    "netifaces>=0.11.0",
    "pyhamcrest>=2.1.0",
    "pytest>=9.0.3",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.8.0",
    "flake8>=7.3.0",
    "black>=23.7.0",
    "isort>=8.0.1",
    "mypy>=1.5.0",
    "pyright>=1.1.409",
    "shellcheck-py>=0.9.0",
    "pip-audit>=2.7.0",
]

# amqtt==0.10.x requires pyyaml<6.0 and amqtt==0.11.x requires pyyaml==6.0.2.
# Without this floor, uv can backtrack amqtt to 0.10.x and then select
# pyyaml==5.4.1, which has no Python 3.14 wheel and fails to build from source.
[tool.uv]
constraint-dependencies = ["pyyaml>=6.0"]
