[project]
name = "my-tracks"
version = "0.1.0"
description = "Self-hosted location tracking backend for OwnTracks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "python-decouple>=3.8",
    "psycopg2-binary>=2.9.12",
    "gunicorn>=26.0.0",
    "channels>=4.3.2",
    "daphne>=4.2.2",
    "whitenoise>=6.12.0",
    "typer>=0.15.0",
    "amqtt",
    "cryptography>=49.0.0",
    "dj-database-url>=3.1.2",
    "h2>=4.3.0",
    "priority>=2.0.0",
    "cbor2>=6.1.2",
    "pyasn1==0.6.3",
    "pygments==2.20.0",
    "pyopenssl>=26.3.0",
    "ujson>=5.13.0",
    "charset-normalizer==3.4.7",
    "filelock>=3.29.4",
    "librt==0.11.0",
    "packaging==26.2",
    "platformdirs>=4.10.0",
    "rich==15.0.0",
    "zope-interface>=8.5",
    "pytest-django>=4.12.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "shellcheck-py>=0.11.0.1",
    "pip-audit>=2.10.1",
    "idna>=3.18",
    "certifi>=2026.6.17",
    "pathspec==1.1.1",
    "pip>=26.1.2",
    "mypy>=2.1.0",
    "twisted==26.4.0",
    "markdown-it-py==4.2.0",
    "urllib3==2.7.0",
    "coverage>=7.14.3",
    "requests>=2.34.2",
    "ast-serialize>=0.5.0",
    "service-identity==26.1.0",
    "cyclonedx-python-lib>=11.11.0",
    "msgpack==1.2.1",
    "txaio==26.6.1",
    "hpack==4.2.0",
    "pyright==1.1.411",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "app"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["tests/python"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v -n auto"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["app"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
# Replaces flake8 (E/F + F401/F841) and isort (I). Pyright remains for types.
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Django settings: imports and defs interleaved with configuration (was .flake8)
"config/settings.py" = ["E302", "E305", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["app", "config", "web_ui"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


[dependency-groups]
dev = [
    "coverage-enable-subprocess>=1.0",
    "netifaces>=0.11.0",
    "pyhamcrest>=2.1.0",
    "pytest>=9.1.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.17",
    "pyright>=1.1.410",
    "shellcheck-py>=0.9.0",
    "pip-audit>=2.10.1",
]

# amqtt==0.10.x requires pyyaml<6.0 and amqtt==0.11.x requires pyyaml==6.0.2.
# Without this floor, uv can backtrack amqtt to 0.10.x and then select
# pyyaml==5.4.1, which has no Python 3.14 wheel and fails to build from source.
[tool.uv]
constraint-dependencies = ["pyyaml>=6.0"]
